--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <img class="displayed" src="images/asciisun.png" alt="ascii sun" height="400" />
 </div>
 
-<p> Collective based in Brooklyn, NY. <br> <br> Sunday Collect is the shared practice of Cecila Vidal, Erin Brady, and Nina Muccia; with a focus on community. We are always interested in collaborations—to inquire, please email <a href="mailto:info@sundaycollect.com" >info@sundaycollect.com</a> <br> <br> <br> Past Events <br> <a href="https://www.sundaycollect.com/play" > I layed down by the river </a> <br> <a href="https://www.sundaycollect.com/dinner" > Scarlet Begonia’s—A Night of Sex ’n Shrooms</a> </p>
+<p> Collective based in Brooklyn, NY. <br> <br> Sunday Collect is the shared practice of Cecilia Vidal, Erin Brady, and Nina Muccia; with a focus on community. We are always interested in collaborations—to inquire, please email <a href="mailto:info@sundaycollect.com" >info@sundaycollect.com</a> <br> <br> <br> Past Events <br> <a href="https://www.sundaycollect.com/play" > I layed down by the river </a> <br> <a href="https://www.sundaycollect.com/dinner" > Scarlet Begonia’s—A Night of Sex ’n Shrooms</a> </p>
 
 <!––-
  ____  _  _  __ _  ____   __   _  _     ___  __   __    __    ____  ___  ____    ____   __    __  ___        
