--- a/dinner.html
+++ b/dinner.html
@@ -3,23 +3,49 @@
  <head>
  <meta charset = "UTF-8">
  <title>sunday collect</title>
- <link rel = "stylesheet" type = "text/css" href = "sunday.css" />
+ <link rel = "stylesheet" type = "text/css" href = "./sunday.css" />
 
-<link rel="icon" type="sundaycollect_website/myicon" href="images/favicon.ico" />
+<link rel="icon" type="sundaycollect_website/myicon" href="./images/favicon.ico" />
 </head>
-<body> 
+<body>
 
 
-<p>Coming soon</p>
+<p>Scarlet Begonias—A Night of Sex ’n Shrooms <br><br> Sunday, 23 June 2019 <br><br>
 
+Guests joined us for a Sunday evening dinner and guided discussion surrounding sex, herbal remedies and natural aphrodisiacs, ancient greco-roman cults of Dionysus, bacchanalias, and roman-inspired tapas and edible mushrooms served on cermic ware, napkins, and tablecloth all made by the collective. Guests each recieved an accompanying zine with references, areas for note taking, and sources for further reading. The conversation will serve as the basis and inspiration for the dialogue of our next play. </p>
+
+
+
+<div id ="image">
+<img class="displayed" src="./images/dinner.jpg" alt="dinner" height="400" />
+</div>
+
+<div id ="image">
+<img class="displayed" src="./images/food2.jpg" alt="dinner" height="400" />
+</div>
+
+<div id ="image">
+<img class="displayed" src="./images/table.jpg" alt="dinner" height="600" />
+</div>
+
+<div id ="image">
+<img class="displayed" src="./images/food1.jpg" alt="dinner" height="600" />
+</div>
+
+
+<div id ="image">
+<img class="displayed" src="./images/dinner2.jpg" alt="dinner" height="600" />
+</div>
+
+<p> <br><a href="./index.html" > &#8592;Back </a> </p>
 
 
 <!––-
- ____  _  _  __ _  ____   __   _  _     ___  __   __    __    ____  ___  ____    ____   __    __  ___        
-/ ___)/ )( \(  ( \(    \ / _\ ( \/ )   / __)/  \ (  )  (  )  (  __)/ __)(_  _)  (___ \ /  \  /  \/ _ \       
-\___ \) \/ (/    / ) D (/    \ )  /   ( (__(  O )/ (_/\/ (_/\ ) _)( (__   )(     / __/(  0 )(_/ /\__  )      
-(____/\____/\_)__)(____/\_/\_/(__/     \___)\__/ \____/\____/(____)\___) (__)   (____) \__/  (__)(___/    
- 
+ ____  _  _  __ _  ____   __   _  _     ___  __   __    __    ____  ___  ____    ____   __    __  ___
+/ ___)/ )( \(  ( \(    \ / _\ ( \/ )   / __)/  \ (  )  (  )  (  __)/ __)(_  _)  (___ \ /  \  /  \/ _ \
+\___ \) \/ (/    / ) D (/    \ )  /   ( (__(  O )/ (_/\/ (_/\ ) _)( (__   )(     / __/(  0 )(_/ /\__  )
+(____/\____/\_)__)(____/\_/\_/(__/     \___)\__/ \____/\____/(____)\___) (__)   (____) \__/  (__)(___/
+
  ------>
 
 </body>
