--- a/index.html
+++ b/index.html
@@ -3,28 +3,31 @@
  <head>
  <meta charset = "UTF-8">
  <title>sunday collect</title>
- <link rel = "stylesheet" type = "text/css" href = "sunday.css" />
+ <link rel = "stylesheet" type = "text/css" href = "./sunday.css" />
 
-<link rel="icon" type="sundaycollect_website/myicon" href="images/favicon.ico" />
+<link rel="icon" type="sundaycollect_website/myicon" href="./images/favicon.ico" />
 </head>
-<body> 
+<body>
 
 
 <p> Sunday Collect</p>
 
 
 <div id ="image">
-<img class="displayed" src="images/asciisun.png" alt="ascii sun" height="400" />
+<img class="displayed" src="./images/asciisun.png" alt="ascii sun" height="400" />
 </div>
 
-<p> Collective based in Brooklyn, NY. <br> <br> Sunday Collect is the shared practice of Cecilia Vidal, Erin Brady, and Nina Muccia; with a focus on community. We are always interested in collaborations—to inquire, please email <a href="mailto:info@sundaycollect.com" >info@sundaycollect.com</a> <br> <br> <br> Past Events <br> <a href="https://www.sundaycollect.com/play" > I layed down by the river </a> <br> <a href="https://www.sundaycollect.com/dinner" > Scarlet Begonia’s—A Night of Sex ’n Shrooms</a> </p>
+<p> Collective based in Brooklyn, NY. <br> <br> Sunday Collect is the shared practice of Cecila Vidal, Erin Brady, and Nina Muccia; with a focus on community. We are always interested in collabrations—to inquire, please email <a href="mailto:info@sundaycollect.com" target="_blank">info@sundaycollect.com</a>. <br> <br>Sunday Collect takes practices, rituals, and social histories from the ancient world and connects them to modern and contemporary life via gatherings, workshops, and performances.<br> <br> <br> Past Events<br> <a href="./play.html" > I layed down by the river </a> <br> <a href="./dinner.html" > Scarlet Begonia’s—A Night of Sex ’n Shrooms</a><br> <a href="./workshop.html" >Wax Wraps and Natural Dye Workshop </a> <br> <a href="./yardsale.html" >Yard Sale </a> <br><br> <a href="./upcoming.html" > Upcoming </a>
+
+<br><br><a href="./images/sundaycollectcv.pdf" download target="_blank"> CV </a> </p>
+
 
 <!––-
- ____  _  _  __ _  ____   __   _  _     ___  __   __    __    ____  ___  ____    ____   __    __  ___        
-/ ___)/ )( \(  ( \(    \ / _\ ( \/ )   / __)/  \ (  )  (  )  (  __)/ __)(_  _)  (___ \ /  \  /  \/ _ \       
-\___ \) \/ (/    / ) D (/    \ )  /   ( (__(  O )/ (_/\/ (_/\ ) _)( (__   )(     / __/(  0 )(_/ /\__  )      
-(____/\____/\_)__)(____/\_/\_/(__/     \___)\__/ \____/\____/(____)\___) (__)   (____) \__/  (__)(___/    
- 
+ ____  _  _  __ _  ____   __   _  _     ___  __   __    __    ____  ___  ____    ____   __    __  ___
+/ ___)/ )( \(  ( \(    \ / _\ ( \/ )   / __)/  \ (  )  (  )  (  __)/ __)(_  _)  (___ \ /  \  /  \/ _ \
+\___ \) \/ (/    / ) D (/    \ )  /   ( (__(  O )/ (_/\/ (_/\ ) _)( (__   )(     / __/(  0 )(_/ /\__  )
+(____/\____/\_)__)(____/\_/\_/(__/     \___)\__/ \____/\____/(____)\___) (__)   (____) \__/  (__)(___/
+
  ------>
 
 </body>
