--- a/play.html
+++ b/play.html
@@ -3,23 +3,65 @@
  <head>
  <meta charset = "UTF-8">
  <title>sunday collect</title>
- <link rel = "stylesheet" type = "text/css" href = "sunday.css" />
+ <link rel = "stylesheet" type = "text/css" href = "./sunday.css" />
 
-<link rel="icon" type="sundaycollect_website/myicon" href="images/favicon.ico" />
+<link rel="icon" type="sundaycollect_website/myicon" href="./images/favicon.ico" />
 </head>
-<body> 
+<body>
 
 
-<p>Coming soon</p>
+<p>I layed down by the river<br><br>Palm Sunday, 14 April 2019 <br>Mary Magdalene / Cecilia Vidal <br>
+Angel / Erin Brady<br><br> Written by Cecilia Vidal <br> Sound by K. Mulhern <br>Photos by Parker Camp, Ryan Bongo<br>Costumes, set, and production by Sunday Collect<br><br> In the New Testament, Mary Magdalene is depicted as a composite character of many female archetypes, a burden for any woman to carry. "I layed down by the river" depicts a young woman on the cusp of womanhood, confronting her vulnerability and facing her independent and unknown future. The play is inspired by the songs of early 20th century Appalachian folk band the Carter Family, and contains some dialogue taken from The Golden Legend. Compiled by Blessed Jacobus de Varagine, The Golden Legend is a 13th century collection of speculative stories (fan fiction) of the life of the saints, including that of Mary Magdalene and her life after Jesus. </p>
+
+<div id ="image">
+<img class="displayed" src="./images/still.png" alt="still" height="400" />
+</div>
+
+<div id ="image">
+<img class="displayed" src="./images/marystage.jpg" alt="mary" height="400" />
+</div>
+
+<div id ="image">
+<img class="displayed" src="./images/riso.jpg" alt="invites and programs" height="400" />
+</div>
+
+<div id ="image">
+<img class="displayed" src="./images/set.jpg" alt="set" height="400" />
+</div>
+
+<div id ="image">
+<img class="displayed" src="./images/costumes.jpg" alt="backstage" height="600" />
+</div>
+
+<div id ="image">
+<img class="displayed" src="./images/hair.jpg" alt="costumes" height="400" />
+</div>
+
+<div id ="image">
+<img class="displayed" src="./images/mary.jpg" alt="mary" height="600" />
+</div>
+
+<div id ="image">
+<img class="displayed" src="./images/angel.jpg" alt="play" height="400" />
+</div>
+
+<div id ="image">
+<img class="displayed" src="./images/food.jpg" alt="food" height="400" />
+</div>
+
+<div id ="image">
+<img class="displayed" src="./images/food.jpg" alt="food" height="400" />
+</div>
 
 
+<p> <br><a href="./index.html" > &#8592;Back </a> </p>
 
 <!––-
- ____  _  _  __ _  ____   __   _  _     ___  __   __    __    ____  ___  ____    ____   __    __  ___        
-/ ___)/ )( \(  ( \(    \ / _\ ( \/ )   / __)/  \ (  )  (  )  (  __)/ __)(_  _)  (___ \ /  \  /  \/ _ \       
-\___ \) \/ (/    / ) D (/    \ )  /   ( (__(  O )/ (_/\/ (_/\ ) _)( (__   )(     / __/(  0 )(_/ /\__  )      
-(____/\____/\_)__)(____/\_/\_/(__/     \___)\__/ \____/\____/(____)\___) (__)   (____) \__/  (__)(___/    
- 
+ ____  _  _  __ _  ____   __   _  _     ___  __   __    __    ____  ___  ____    ____   __    __  ___
+/ ___)/ )( \(  ( \(    \ / _\ ( \/ )   / __)/  \ (  )  (  )  (  __)/ __)(_  _)  (___ \ /  \  /  \/ _ \
+\___ \) \/ (/    / ) D (/    \ )  /   ( (__(  O )/ (_/\/ (_/\ ) _)( (__   )(     / __/(  0 )(_/ /\__  )
+(____/\____/\_)__)(____/\_/\_/(__/     \___)\__/ \____/\____/(____)\___) (__)   (____) \__/  (__)(___/
+
  ------>
 
 </body>
