--- a/dinner.html
+++ b/dinner.html
@@ -11,8 +11,7 @@
 
 
 <p>Scarlet Begonias—A Night of Sex ’n Shrooms <br><br> Sunday, 23 June 2019 <br><br>
-
-Guests joined us for a Sunday evening dinner and guided discussion surrounding sex, herbal remedies and natural aphrodisiacs, ancient greco-roman cults of Dionysus, bacchanalias, and roman-inspired tapas and edible mushrooms served on cermic ware, napkins, and tablecloth all made by the collective. Guests each recieved an accompanying zine with references, areas for note taking, and sources for further reading. The conversation will serve as the basis and inspiration for the dialogue of our next play. </p>
+Guests joined us for a Sunday evening dinner and guided discussion surrounding sex, herbal remedies and natural aphrodisiacs, ancient cults of Dionysus, Bacchanalias. The menu featured all plant based food, including Pioppino mushrooms, grown by Cecilia and wine made Erin. The meal was served on ceramic ware made ourselves. The invitations were riso-gocco’d by Nina. Guests each received an accompanying zine with references, areas for note taking, and sources for further reading. The conversation will serve as the basis and inspiration for the dialogue of our next play. </p>
 
 
 
