--- a/alyssadavis.html
+++ b/alyssadavis.html
@@ -30,7 +30,7 @@ Angel / Erin Brady<br><br> Written by Cecilia Vidal <br> Sound by K. Mulhern <br
 </div>
 
 <div id ="image">
-<img class="displayed" src="images/friday_show.jpg" alt="friday night show" width="400" />
+<img class="displayed" src="images/friday_show.JPG" alt="friday night show" width="400" />
 </div>
 
 <div id ="image">
